# prng-statistics

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
include/: mcml_mcg59.h  splitmix64.hpp  util.hpp  xoshiro128plus.hpp  xoshiro256plus.hpp  xoshiro256plusplus.hpp
src/: main.cpp  mcml_mcg59.cpp
